--- a/card_editor/card_editor_web/public_html/index.html
+++ b/card_editor/card_editor_web/public_html/index.html
@@ -12,11 +12,11 @@
         <!-- jQuery -->
         <script src="../js/jquery.js"></script>
         <script src="../js/scripts.js"></script>
-
-        <script src="../js/jquery.soap.js"></script>
         <!-- Bootstrap Core JavaScript -->
+        <script src="../js/bootstrap.js"></script>
         <script src="../js/bootstrap.min.js"></script>
 
+        <script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
         <title>Card Editor Forum</title>
 
         <!-- Bootstrap Core CSS -->
@@ -26,6 +26,8 @@
 
         <!-- Custom CSS -->
         <link href="../css/blog-post.css" rel="stylesheet">
+
+        <link href="../css/estilos.css" rel="stylesheet">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -37,20 +39,15 @@
     </head>
 
     <body>
-
-        <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="#">Forum</a>
+                            <a href="index.html">Forum</a>
                         </li>
                         <li>
-                            <a href="#">Services</a>
-                        </li>
-                        <li>
-                            <a href="#">Contact</a>
+                            <a href="telaCadastro.html">Cadastro</a>
                         </li>
                     </ul>
                 </div>
@@ -58,12 +55,22 @@
             </div>
             <!-- /.container -->
         </nav>
-
-        <button type="button" class="btn btn-secondary" onclick="salvarUsuario()">Secondary</button>
-        
-        <button type="button" class="btn btn-secondary" onclick="salvarUsuario2()">Secondary</button>
-
-        <span id="resposta" ></span>
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="index.html">Forum</a>
+                        </li>
+                        <li>
+                            <a href="telaCadastro.html">Cadastro</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container -->
+        </nav>
     </body>
 
 </html>
