--- a/card_editor/card_editor_web/public_html/telaCadastro.html
+++ b/card_editor/card_editor_web/public_html/telaCadastro.html
@@ -15,7 +15,7 @@
         <!-- Bootstrap Core JavaScript -->
         <script src="../js/bootstrap.js"></script>
         <script src="../js/bootstrap.min.js"></script>
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
         <script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
         <title>Card Editor Forum</title>
 
@@ -53,20 +53,28 @@
             </div>
             <!-- /.container -->
         </nav>
+        <div id="successMessage"></div>
         <div style="margin-left:1%">
             <div>
-                <label for="usr">Nome:</label>
+                <label for="usr">Nome:*</label>
                 <input type="text" class="form-control input-cad" id="name">
             </div>
             <div>
-                <label for="usr">Nome de usuário(para acesso à aplicação):</label>
+                <label for="usr">Nome de usuário(para acesso à aplicação):*</label>
                 <input type="text" class="form-control input-cad" id="usr">
                 <div id="resp_user"></div>
             </div>
-
+            <script>
+                $("#usr")
+                        .focusout(function () {
+                            verificaUsuario();
+                        })
+                        .blur(function () {
+                        });
+            </script>
             <div>
-                <label for="pwd">Senha:</label>
-                <input type="password" onclick="verificaUsuario()" class="form-control input-cad" id="pwd">
+                <label for="pwd">Senha:*</label>
+                <input type="password" class="form-control input-cad" id="pwd">
             </div>
 
             <div>
