--- a/card_editor/card_editor_web/public_html/index.html
+++ b/card_editor/card_editor_web/public_html/index.html
@@ -19,6 +19,14 @@
         <script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
         <title>Card Editor Forum</title>
 
+        <script src="../js/jquery-2.2.4.min.js"></script> 
+        <script src="../js/angular.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
+        <script src="../js/gunzip.min.js"></script>
+        <script src="../js/gzip.min.js"></script>
+        <script src="../js/toastr.min.js"></script>
+        <script src="../js/scripts.js"></script>
+
         <!-- Bootstrap Core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
 
@@ -39,38 +47,12 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="index.html">Forum</a>
-                        </li>
-                        <li>
-                            <a href="telaCadastro.html">Cadastro</a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container -->
-        </nav>
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="index.html">Forum</a>
-                        </li>
-                        <li>
-                            <a href="telaCadastro.html">Cadastro</a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container -->
-        </nav>
+        <div id="menu" ></div>
+        <label for="usr">Base64:</label>
+        <input type="file" class="form-control input-cad" id="file">
+
+        <button type="button" class="btn btn-primary" style="display:block" onclick="uploadCard()">Upload Card</button>
+
     </body>
 
 </html>
