--- a/card_editor/card_editor_web/public_html/pages/cabecalho.html
+++ b/card_editor/card_editor_web/public_html/pages/cabecalho.html
@@ -7,23 +7,30 @@ and open the template in the editor.
 <html>
     <head>
         <title>Menu Superior da tela</title>
+        <script src="../js/scriptCabecalho.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
                             <a href="index.html">Forum</a>
                         </li>
-                        <li>
-                            <a href="telaCadastro.html">Cadastro</a>
-                        </li>
                     </ul>
+                    <div class="nav navbar-nav div-account">
+                        <div id="account-info"></div>
+                    </div>
                 </div>
-                <div class="div-account">
-                    Teste
-                </div>
+
             </div>
             <!-- /.container -->
         </nav>
