--- a/card_editor/card_editor_web/public_html/pages/index.html
+++ b/card_editor/card_editor_web/public_html/pages/index.html
@@ -9,22 +9,13 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <!-- jQuery -->
-        <script src="../js/jquery.js"></script>
-        <script src="../js/scripts.js"></script>
-        <!-- Bootstrap Core JavaScript -->
-        <script src="../js/bootstrap.js"></script>
-        <script src="../js/bootstrap.min.js"></script>
-
-        <script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
         <title>Card Editor Forum</title>
 
         <script src="../js/jquery-2.2.4.min.js"></script> 
         <script src="../js/angular.min.js"></script>
         <script src="../js/bootstrap.min.js"></script>
-        <script src="../js/gunzip.min.js"></script>
-        <script src="../js/gzip.min.js"></script>
         <script src="../js/toastr.min.js"></script>
+        <script src="../js/jquery.cookie.js"></script>
         <script src="../js/scripts.js"></script>
 
         <!-- Bootstrap Core CSS -->
@@ -32,11 +23,8 @@
 
         <link href="../css/bootstrap.css" rel="stylesheet">
 
-        <!-- Custom CSS -->
-        <link href="../css/blog-post.css" rel="stylesheet">
-
         <link href="../css/estilos.css" rel="stylesheet">
-
+        <link href="../css/toastr.min.css" rel="stylesheet">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
