--- a/card_editor/card_editor_web/public_html/pages/telaCadastro.html
+++ b/card_editor/card_editor_web/public_html/pages/telaCadastro.html
@@ -9,23 +9,17 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <!-- jQuery -->
-        <script src="../js/jquery.js"></script>
-        <script src="../js/scripts.js"></script>
-        <!-- Bootstrap Core JavaScript -->
-        <script src="../js/bootstrap.js"></script>
-        <script src="../js/bootstrap.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-        <script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
         <title>Card Editor Forum</title>
 
-        <!-- Bootstrap Core CSS -->
+        <script src="../js/jquery-2.2.4.min.js"></script> 
+        <script src="../js/bootstrap.min.js"></script>
+        <script src="../js/gunzip.min.js"></script>
+        <script src="../js/gzip.min.js"></script>
+        <script src="../js/toastr.min.js"></script>
+        <script src="../js/scripts.js"></script>
+
         <link href="../css/bootstrap.min.css" rel="stylesheet">
-
-        <link href="../css/bootstrap.css" rel="stylesheet">
-        <!-- Custom CSS -->
-        <link href="../css/blog-post.css" rel="stylesheet">
-
+        <link href="../css/toastr.min.css" rel="stylesheet">
         <link href="../css/estilos.css" rel="stylesheet">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -34,6 +28,7 @@
             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
+
     </head>
 
     <body>
@@ -54,14 +49,14 @@
             <!-- /.container -->
         </nav>
         <div id="successMessage"></div>
-        <div style="margin-left:1%">
-            <div>
+        <div class="row panel-input">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <label for="usr">Nome:*</label>
-                <input type="text" class="form-control input-cad" id="name">
+                <input type="text" class="form-control" id="name">
             </div>
-            <div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <label for="usr">Nome de usuário(para acesso à aplicação):*</label>
-                <input type="text" class="form-control input-cad" id="usr">
+                <input type="text" class="form-control" id="usr">
                 <div id="resp_user"></div>
             </div>
             <script>
@@ -72,41 +67,36 @@
                         .blur(function () {
                         });
             </script>
-            <div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <label for="pwd">Senha:*</label>
-                <input type="password" class="form-control input-cad" id="pwd">
+                <input type="password" class="form-control" id="pwd">
             </div>
-
-            <div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <label for="usr">Descrição:</label>
-                <input type="text" class="form-control input-cad" id="desc">
+                <input type="text" class="form-control" id="desc">
             </div>
 
-            <div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <label for="usr">Email:</label>
-                <input type="text" class="form-control input-cad" id="email">
+                <input type="text" class="form-control" id="email">
             </div>
 
-            <div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <label for="usr">Data de nascimento:</label>
                 <div>
-                    <input type="date" name="bday" class="form-control input-cad" id="bday">
+                    <input type="date" name="bday" class="form-control" id="bday">
                 </div>
             </div>
-
-            <div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <label for="usr">Url da imagem do usuário:</label>
                 <div>
-                    <input type="url" class="form-control input-cad" id="img">
+                    <input type="url" class="form-control" id="img">
                 </div>
             </div>
-
-            <button type="button" class="btn btn-primary" style="display:block" onclick="salvarUsuario()">Efetuar Cadastro</button>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <button type="button" class="btn btn-primary" onclick="salvarUsuario()">Efetuar Cadastro</button>
         </div>
     </body>
 
 </html>
-
-
-
-
