--- a/card_editor/card_editor_web/public_html/pages/cabecalho.html
+++ b/card_editor/card_editor_web/public_html/pages/cabecalho.html
@@ -7,6 +7,8 @@ and open the template in the editor.
 <html>
     <head>
         <title>Menu Superior da tela</title>
+        <script src="../js/jquery-2.2.4.min.js"></script> 
+        <script src="../js/jquery.cookie.js"></script>
         <script src="../js/scriptCabecalho.js"></script>
     </head>
     <body>
@@ -19,6 +21,8 @@ and open the template in the editor.
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
+                    <a class="navbar-brand" href="#">Card Editor Fórum</a>
+
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
