Telas de poste ajuste acesso

--- a/card_editor/card_editor_web/public_html/pages/login.html
+++ b/card_editor/card_editor_web/public_html/pages/login.html
@@ -38,6 +38,7 @@ and open the template in the editor.
 
     </head>
     <body>
+        <div id="menu" ></div>
         <div class="row panel-input">
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <label for="usr">Nome de usuário:*</label>
