--- a/card_editor/card_editor_web/public_html/pages/cabecalho.html
+++ b/card_editor/card_editor_web/public_html/pages/cabecalho.html
@@ -21,13 +21,18 @@ and open the template in the editor.
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Card Editor Fórum</a>
+                    <a class="navbar-brand" href="index.html">Card Editor Fórum</a>
 
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="index.html">Forum</a>
+                            <a href="post.html">Criar Postagem</a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="upload.html">Upload de carta</a>
                         </li>
                     </ul>
                     <div class="nav navbar-nav div-account">
