--- a/card_editor/card_editor_web_file_upload/src/main/webapp/paginas/uploadFile.xhtml
+++ b/card_editor/card_editor_web_file_upload/src/main/webapp/paginas/uploadFile.xhtml
@@ -5,12 +5,16 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+<html  xmlns="http://www.w3.org/1999/xhtml"
+       xmlns:f="http://java.sun.com/jsf/core"
+       xmlns:ui="http://java.sun.com/jsf/facelets"
+       xmlns:p="http://primefaces.org/ui"
+       xmlns:h="http://java.sun.com/jsf/html">
+    <h:head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
+    </h:head>
+    <h:body>
         <div>TODO write content</div>
-    </body>
+    </h:body>
 </html>
