--- a/card_editor/card_editor_web/public_html/pages/upload.html
+++ b/card_editor/card_editor_web/public_html/pages/upload.html
@@ -8,13 +8,31 @@ and open the template in the editor.
 
     <head>
         <script src="../js/jquery-2.2.4.min.js"></script> 
-        <script src="../js/upload.js" ></script>
+        <script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
+        <script src="../js/toastr.min.js"></script>
+        <script src="../js/jquery.cookie.js"></script>
+        <script src="../js/scripts.js"></script>
+          <!-- Bootstrap Core CSS -->
+        <link href="../css/bootstrap.min.css" rel="stylesheet">
+
+        <link href="../css/bootstrap.css" rel="stylesheet">
+
+        <link href="../css/estilos.css" rel="stylesheet">
+        <link href="../css/toastr.min.css" rel="stylesheet">
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+        
     </head>
 
     <body>
-        <fieldset>
-           
-        </fieldset>
-
+        <div id="menu" ></div>
+        <div ng-app="">
+            <div ng-include="'http://localhost:7004/card_editor_file_upload/'" ></div>
+        </div>
     </body>
 </html>
