Compressão / Descompressão de arquivos

--- a/card_editor/card_editor_file_upload/web/paginas/index.xhtml
+++ b/card_editor/card_editor_file_upload/web/paginas/index.xhtml
@@ -17,7 +17,7 @@
                           mode="advanced" 
                           dragDropSupport="true" process="@this"
                           update="messages"
-                          allowTypes="/(\.|\/)(tgz)$/" />
+                          allowTypes="/(\.|\/)(cse-card)$/" />
 
             <script src="../js/script-upload.js"></script>
         </h:form>
