--- a/card_editor/card_editor_web/public_html/pages/cabecalho.html
+++ b/card_editor/card_editor_web/public_html/pages/cabecalho.html
@@ -21,7 +21,7 @@ and open the template in the editor.
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Card Editor Fórum</a>
+                    <a class="navbar-brand" href="index.html">Card Set Editor Community</a>
 
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
