--- a/card_editor/card_editor_file_upload/web/paginas/index.xhtml
+++ b/card_editor/card_editor_file_upload/web/paginas/index.xhtml
@@ -14,7 +14,7 @@
                 Faça o Upload da sua carta
             </h1>
             <p:fileUpload fileUploadListener="#{cardMB.uploadFile}"
-                          mode="advanced" 
+                          mode="advanced" multiple="false"
                           dragDropSupport="true" process="@this"
                           update="messages"
                           allowTypes="/(\.|\/)(cse-card)$/" />
