--- a/card_editor/card_editor_file_upload/web/paginas/index.xhtml
+++ b/card_editor/card_editor_file_upload/web/paginas/index.xhtml
@@ -5,7 +5,9 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Upload Page</title>
-        <link href="../css/bootstrap.min.css" rel="stylesheet" />
+        <link href="#{facesContext.externalContext.requestContextPath}/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <script src="#{facesContext.externalContext.requestContextPath}/js/jquery-2.2.4.min.js" type="text/javascript"></script>
+        <script src="#{facesContext.externalContext.requestContextPath}/js/jquery.cookie.js" type="text/javascript"></script>
     </h:head>
     <h:body>
         <h:form enctype="multipart/form-data">
@@ -19,7 +21,7 @@
                           update="messages"
                           allowTypes="/(\.|\/)(cse-card)$/" />
 
-            <script src="../js/script-upload.js"></script>
+            <script src="#{facesContext.externalContext.requestContextPath}/js/script-upload.js"></script>
         </h:form>
     </h:body>
 </html>
