--- a/card_editor/card_editor_file_upload/web/paginas/index.xhtml
+++ b/card_editor/card_editor_file_upload/web/paginas/index.xhtml
@@ -6,17 +6,33 @@
     <h:head>
         <title>Upload Page</title>
         <link href="#{facesContext.externalContext.requestContextPath}/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <script src="#{facesContext.externalContext.requestContextPath}/js/jquery-2.2.4.min.js" type="text/javascript"></script>
         <script src="#{facesContext.externalContext.requestContextPath}/js/jquery.cookie.js" type="text/javascript"></script>
     </h:head>
     <h:body>
         <h:form enctype="multipart/form-data">
-            <p:growl id="messages" />
+            <p:growl id="messages" showDetail="true" showSummary="true" autoUpdate="true" life="20000"/>
+            <p:outputPanel id="panel">
+                <p:outputPanel rendered="#{cardMB.userName eq null or empty cardMB.userName}">
+                    <p:outputLabel value="Nome de usuário"  for="userName" />
+                    <p:inputText id="userName" required="true"
+                                 value="#{cardMB.systemUser.userName}"/>
+                    <p:outputLabel value="Senha"  for="password" />
+                    <p:password id="password" required="true"
+                                value="#{cardMB.systemUser.userPassword}" />
+                    <p:commandButton actionListener="#{cardMB.efetuarLogin()}"
+                                     process="panel"
+                                     value="Efetuar Login para efetuar upload de projeto."
+                                     update="panel" />
+                </p:outputPanel>
+                <p:outputPanel rendered="#{cardMB.userName ne null and not empty cardMB.userName}">
+                    <p:outputLabel value="Seja bem vindo #{cardMB.userName}!" />
+                </p:outputPanel>
+            </p:outputPanel>
             <h1>
                 Faça o Upload da sua carta
             </h1>
-            <p:fileUpload fileUploadListener="#{cardMB.uploadFile}"
-                          mode="advanced" multiple="false"
+            <p:fileUpload fileUploadListener="#{cardMB.uploadFile}" disabled=""
+                          mode="advanced" multiple="false" 
                           dragDropSupport="true" process="@this"
                           update="messages"
                           allowTypes="/(\.|\/)(cse-card)$/" />
