--- a/card_editor/card_editor_web/public_html/pages/upload.html
+++ b/card_editor/card_editor_web/public_html/pages/upload.html
@@ -30,7 +30,7 @@ and open the template in the editor.
     <body>
         <div id="menu" ></div>
         <div ng-app="">
-            <div ng-include="'http://localhost:7004/card_editor_file_upload/'" ></div>
+            <div ng-include="'http://192.168.43.207:7004/card_editor_file_upload/'" ></div>
         </div>
     </body>
 </html>
