--- a/card_editor/card_editor_web/public_html/pages/index.html
+++ b/card_editor/card_editor_web/public_html/pages/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="Lucas Schunk">
 
-        <title>Card Editor Forum</title>
+        <title>Card Set Editor Community</title>
 
         <script src="../js/jquery-2.2.4.min.js"></script> 
         <script src="../js/angular.min.js"></script>
@@ -34,11 +34,7 @@
 
     <body>
         <div id="menu" ></div>
-        <label for="usr">Base64:</label>
-        <input type="file" class="form-control input-cad" id="file">
-
-        <button type="button" class="btn btn-primary" style="display:block" onclick="uploadCard()">Upload Card</button>
-
+        <label for="usr">Bem vindo ao Card Set Editor Community</label>
     </body>
 
 </html>
