--- a/card_editor/card_editor_web/public_html/pages/upload.html
+++ b/card_editor/card_editor_web/public_html/pages/upload.html
@@ -7,6 +7,7 @@ and open the template in the editor.
 <html>
 
     <head>
+        <title>Card Set Editor Community</title>
         <script src="../js/jquery-2.2.4.min.js"></script> 
         <script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
         <script src="../js/bootstrap.min.js"></script>
