--- a/card_editor/card_editor_web/public_html/pages/cabecalho.html
+++ b/card_editor/card_editor_web/public_html/pages/cabecalho.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Menu Superior da tela</title>
+        <title>Card Set Editor Community</title>
         <script src="../js/jquery-2.2.4.min.js"></script> 
         <script src="../js/jquery.cookie.js"></script>
         <script src="../js/scriptCabecalho.js"></script>
