--- a/card_editor/card_editor_web/public_html/pages/post.html
+++ b/card_editor/card_editor_web/public_html/pages/post.html
@@ -13,7 +13,7 @@ and open the template in the editor.
         <meta name="description" content="">
         <meta name="author" content="Lucas Schunk">
 
-        <title>Card Editor Forum</title>
+        <title>Card Set Editor Community</title>
 
         <script src="../js/jquery-2.2.4.min.js"></script> 
         <script src="../js/angular.min.js"></script>
