--- a/card_editor/card_editor_web/public_html/pages/telaCadastro.html
+++ b/card_editor/card_editor_web/public_html/pages/telaCadastro.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="Lucas Schunk">
 
-        <title>Card Editor Forum</title>
+        <title>Card Set Editor Community</title>
 
         <script src="../js/jquery-2.2.4.min.js"></script> 
         <script src="../js/angular.min.js"></script>
